--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -665,10 +665,18 @@
                     </a>
                     <ul class="nav-submenu">
                         <li class="nav-item">
+                            <a class="nav-link {% if 'settings_overview' in request.resolver_match.url_name %}active{% endif %}" 
+                               href="/business/{{ request.tenant.slug }}/business/settings/">
+                                <i class="nav-icon fas fa-home"></i>
+                                <span class="nav-text">Settings Overview</span>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
                             <a class="nav-link {% if 'business_settings' in request.resolver_match.url_name %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/business/settings/business/">
                                 <i class="nav-icon fas fa-building"></i>
-                                <span class="nav-text">Business Settings</span>
+                                <span class="nav-text">Business Profile</span>
                             </a>
                         </li>
                         
@@ -684,7 +692,7 @@
                             <a class="nav-link {% if 'payment_settings' in request.resolver_match.url_name %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/business/settings/payment/">
                                 <i class="nav-icon fas fa-credit-card"></i>
-                                <span class="nav-text">Payment Settings</span>
+                                <span class="nav-text">Payment & Billing</span>
                             </a>
                         </li>
                         
@@ -697,34 +705,26 @@
                         </li>
                         
                         <li class="nav-item">
-                            <a class="nav-link {% if 'integration_settings' in request.resolver_match.url_name %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/business/settings/integrations/">
-                                <i class="nav-icon fas fa-plug"></i>
-                                <span class="nav-text">Integrations</span>
+                            <a class="nav-link {% if 'feature_settings' in request.resolver_match.url_name %}active{% endif %}" 
+                               href="/business/{{ request.tenant.slug }}/business/settings/features/">
+                                <i class="nav-icon fas fa-toggle-on"></i>
+                                <span class="nav-text">Features</span>
+                            </a>
+                        </li>
+                        
+                        <li class="nav-item">
+                            <a class="nav-link {% if 'business_hours' in request.resolver_match.url_name %}active{% endif %}" 
+                               href="/business/{{ request.tenant.slug }}/business/settings/hours/">
+                                <i class="nav-icon fas fa-clock"></i>
+                                <span class="nav-text">Business Hours</span>
                             </a>
                         </li>
                         
                         <li class="nav-item">
                             <a class="nav-link {% if 'backup_settings' in request.resolver_match.url_name %}active{% endif %}" 
                                href="/business/{{ request.tenant.slug }}/business/settings/backup/">
-                                <i class="nav-icon fas fa-database"></i>
-                                <span class="nav-text">Backup & Restore</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link {% if 'security_settings' in request.resolver_match.url_name %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/business/settings/security/">
-                                <i class="nav-icon fas fa-shield-alt"></i>
-                                <span class="nav-text">Security</span>
-                            </a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link {% if 'user_management' in request.resolver_match.url_name %}active{% endif %}" 
-                               href="/business/{{ request.tenant.slug }}/business/settings/users/">
-                                <i class="nav-icon fas fa-users-cog"></i>
-                                <span class="nav-text">User Management</span>
+                                <i class="nav-icon fas fa-download"></i>
+                                <span class="nav-text">Backup & Export</span>
                             </a>
                         </li>
                     </ul>
