--- a/templates/services/service_list.html
+++ b/templates/services/service_list.html
@@ -278,7 +278,7 @@
                 {% endif %}
             </p>
             {% if user_role in 'owner,manager' and not request.GET.search and not request.GET.category and not request.GET.status %}
-            <a href="/business/{{ request.tenant.slug }}/services/add/" class="btn btn-primary">
+            <a href="/business/{{ request.tenant.slug }}/services/create/" class="btn btn-primary">
                 <i class="fas fa-plus me-1"></i>
                 Add Your First Service
             </a>
