--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -819,15 +819,10 @@
         <div class="nav-section">
             <div class="nav-section-title">Support</div>
             <ul class="nav-list">
+           
+
                 <li class="nav-item">
-                    <a class="nav-link" href="/help/" target="_blank">
-                        <i class="nav-icon fas fa-question-circle"></i>
-                        <span class="nav-text">Help Center</span>
-                    </a>
-                </li>
-                
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact/" target="_blank">
+                    <a class="nav-link" href="https://autowash.co.ke/" target="_blank">
                         <i class="nav-icon fas fa-headset"></i>
                         <span class="nav-text">Contact Support</span>
                     </a>
