--- a/templates/services/service_detail.html
+++ b/templates/services/service_detail.html
@@ -42,7 +42,7 @@
         </div>
         <div class="page-actions">
             {% if user_role in 'owner,manager' %}
-            <a href="#" class="btn btn-outline-primary">
+            <a href="/business/{{ request.tenant.slug }}/services/{{ service.id }}/edit/" class="btn btn-outline-primary">
                 <i class="fas fa-edit"></i>
                 Edit Service
             </a>
