Add cPanel deployment reset script and UI improvements

--- a/templates/customers/customer_detail.html
+++ b/templates/customers/customer_detail.html
@@ -41,7 +41,7 @@
                 More Actions
             </button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="/business/{{ request.tenant.slug }}/customers/{{ customer.pk }}/vehicles/add/">
+                <li><a class="dropdown-item" href="/business/{{ request.tenant.slug }}/customers/{{ customer.pk }}/vehicles/create/">
                     <i class="fas fa-car"></i> Add Vehicle
                 </a></li>
                 <li><a class="dropdown-item" href="/business/{{ request.tenant.slug }}/customers/{{ customer.pk }}/notes/create/">
@@ -181,7 +181,7 @@
                     Vehicles ({{ vehicles.count }})
                 </h5>
                 <div class="card-actions">
-                    <a href="/business/{{ request.tenant.slug }}/customers/{{ customer.pk }}/vehicles/create/" class="btn btn-sm btn-primary">
+                    <a href="/business/{{ request.tenant.slug }}/customers/{{ customer.pk }}/vehicles/add/"class="btn btn-sm btn-primary">
                         <i class="fas fa-plus"></i>
                         Add Vehicle
                     </a>
