--- a/templates/includes/topbar/user_menu.html
+++ b/templates/includes/topbar/user_menu.html
@@ -100,17 +100,10 @@
             </button>
         </li>
         
-        <!-- Help & Support -->
-        <li>
-            <a class="dropdown-item" href="/help/" target="_blank" rel="noopener">
-                <i class="fas fa-question-circle"></i>
-                <span>Help Center</span>
-                <i class="fas fa-external-link-alt ms-auto small"></i>
-            </a>
-        </li>
+      
         
         <li>
-            <a class="dropdown-item" href="/contact/" target="_blank" rel="noopener">
+            <a class="dropdown-item" href="https://autowash.co.ke" target="_blank" rel="noopener">
                 <i class="fas fa-headset"></i>
                 <span>Support</span>
                 <i class="fas fa-external-link-alt ms-auto small"></i>
